kubernetes/apps/vpn-gateway/gluetun-egress/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-forwarder
  namespace: kube-system
  labels:
    app: vpn-gateway
spec:
  selector:
    app: vpn-gateway
  ports:
    - name: control
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
