kubernetes/apps/vpn-gateway/gluetun-egress/app/networkpolicy.yaml
---
# This policy allows inbound connections to the vpn-gateway on port 8000 to gluetun http_control_server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway-control-server
  namespace: vpn-gateway
spec:
  endpointSelector:
    matchLabels:
      app: gluetun-egress
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
